# desktopradar

./: HANDOFF.md  README.md
.github/workflows/: release.yml
docs/: drawer-mock.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: airports.rs  classify.rs  config.rs  desktop.rs  feeds.rs  main.rs  operators.rs  routes.rs  store.rs
ui/: app.js  index.html  style.css
