[package]
name = "adsb-radar"
version = "0.1.2"
description = "Desktop ADS-B radar gadget"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["time"] }
dirs = "5"
base64 = "0.22"
opener = "0.7"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
winreg = "0.55"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
